compressed image and align fix

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Scroll down to explore more about me</p>
 
         </div>
-        <div class="w-50 text-center">
+        <div class="w-50 text-right">
             <img src="./images/top-image.png" alt="razuahmedjoy">
         </div>
     </section>
@@ -59,7 +59,7 @@
     </section>
     
     <section class="development flex-container">
-        <div class="w-50 text-center">
+        <div class="w-50 text-left">
             <img src="./images/coding.png" alt="development">
         </div>
         <div class="w-50">
@@ -78,7 +78,7 @@
             <p>My next target is to learn how to scale a big project. For this reason I think I need to join any team who develop big projects. After joining a team I think I can learn many advanced topics which are very important for a developer. If you are interested to give me a chance to join your team you can check my CV. </p>
             <a href="#" class="btn-links">Download My CV</a>
         </div>
-        <div class="w-50 text-center">
+        <div class="w-50 text-right">
             <img src="./images/project.png" alt="project">
         </div>
     </section>
